[package]
name = "order_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-observer = "0.1.0"
rust_decimal = "1.30.0"
rust_decimal_macros = "1.30.0"
rand = "0.8.5"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
futures-util = "0.3"
log = "0.4"
env_logger = "0.9"


[[test]]
name = "order_book_tests"
path = "tests/order_book_tests.rs"


